src/objects/Quote_Discount_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Type_Count__c</fullName>
        <label>Approval Type Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App TX</fullName>
                </value>
                <value>
                    <fullName>PCFC</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>Transformation</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Enablement</fullName>
                </value>
                <value>
                    <fullName>Engagement Director</fullName>
                </value>
                <value>
                    <fullName>APLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Discount__c</fullName>
        <label>Min Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Discount Summary</relationshipLabel>
        <relationshipName>Quote_Discount_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Count__c</fullName>
        <label>Rate Plan Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services/Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSO</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Discount Summary</label>
    <nameField>
        <displayFormat>QDS-{00000}</displayFormat>
        <label>Quote Discount Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Discount Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote__c</columns>
        <columns>Approval_Type__c</columns>
        <columns>Approval_Type_Count__c</columns>
        <columns>Max_Discount__c</columns>
        <columns>Min_Discount__c</columns>
        <columns>Rate_Plan_Count__c</columns>
        <columns>Services__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>